showcase/showcase-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: showcase
  namespace: showcase
spec:
  selector:
    app: showcase
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
